@@ -63,7 +63,7 @@ Reinitialize after first initialization
 Exit immediately after initialization
 .TP
 .B \-Dw
-Delay for one secod the creation of the first worker thread
+Delay for one second the creation of the first worker thread
 .SH SIGNALS
 .TP
 \- SIGTERM and SIGINT (Ctrl\-C) will cleanly stop the engine
@@ -80,8 +80,10 @@ Some
 .B libpthread
 implementations are broken and may fail to start the threads or fail to cleanup
 when the thread terminates.
-.SH AUTHOR
+.SH AUTHORS
 Paul Chitescu <paulc-devel@null.ro>
+.br
+Diana Cionoiu <diana@diana.null.ro>
 .SH SEE ALSO
 .\" .BR libyate (3),
 .BR bayonne (8)
