@@ -1,3 +1,10 @@
+Mon Nov 01 2004 Diana Cionoiu <diana@diana.null.ro>
+- Fixed a serious memory leak in threads
+
+Sun Oct 31 2004 Paul Chitescu <paulc-devel@null.ro>
+- Added supervised running and periodic restart
+- Fixed lots of locking bugs
+
 Wed Sep 29 2004 Paul Chitescu <paulc-devel@null.ro>
 - Bumped version to 0.8.4
 - Added timestamps to all data channels
